--- a/src/Lykke.Job.SlackNotifications.Core/Lykke.Job.SlackNotifications.Core.csproj
+++ b/src/Lykke.Job.SlackNotifications.Core/Lykke.Job.SlackNotifications.Core.csproj
@@ -5,4 +5,8 @@
     <Version>1.0.1</Version>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Lykke.SettingsReader" Version="1.0.41" />
+  </ItemGroup>
+
 </Project>
